syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";
import "ResponseCode.proto";


/* The consensus result for a transaction, which might not be currently known, or may  succeed or fail. */
message TransactionReceipt {
    ResponseCodeEnum status = 1; // whether the transaction succeeded or failed (or is unknown)

    AccountID accountID = 2; //  the account ID, if a new account was created
    FileID fileID = 3; // the file ID, if a new file was created
    ContractID contractID = 4; // the contract ID, if a new smart contract instance was created
}
